--- a/qt/emilpro/mainwindow.ui
+++ b/qt/emilpro/mainwindow.ui
@@ -139,6 +139,9 @@
                  <property name="showGrid">
                   <bool>false</bool>
                  </property>
+                 <property name="sortingEnabled">
+                  <bool>true</bool>
+                 </property>
                  <property name="wordWrap">
                   <bool>false</bool>
                  </property>
@@ -204,6 +207,9 @@
                  </property>
                  <property name="showGrid">
                   <bool>false</bool>
+                 </property>
+                 <property name="sortingEnabled">
+                  <bool>true</bool>
                  </property>
                  <property name="wordWrap">
                   <bool>false</bool>
